# persistent-dynamodb

./: .gitignore  CHANGELOG.md  cabal.project  flake.nix  persistent-dynamodb.cabal
src/Database/Persist/: DynamoDB.hs
src/Database/Persist/DynamoDB/: KnownErrors.hs
test/: Main.hs
test/Spec/Database/Persist/: DynamoDB.hs
