cabal-version:   3.4
name:            persistent-dynamodb
version:         0.1.0.0
synopsis:        AWS DynamoDB backend for persistent
license:         BSD-3-Clause
author:          kokobd
maintainer:      contact@zelinf.net
copyright:       Copyright 2023 kokobd
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

common opts
  ghc-options:   -Wall
  build-depends:
    , aeson
    , amazonka
    , amazonka-dynamodb
    , base
    , binary
    , bytestring
    , containers
    , generic-lens
    , http-api-data
    , lens
    , mtl
    , path-pieces
    , persistent
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , uuid
    , vector

library
  import:          opts

  -- cabal-fmt: expand src/
  exposed-modules: Database.Persist.DynamoDB
  build-depends:
    , base
    , persistent

  hs-source-dirs:  src

test-suite tests
  import:             opts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs

  -- cabal-fmt expand test/ -Main
  other-modules:      Spec.Database.Persist.DynamoDB
  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
    , hedgehog
    , persistent-dynamodb
    , port-utils
    , process
    , tasty
    , tasty-hedgehog
    , tasty-hunit
